[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fireball/fireball.png" type="Texture" id=1]
[ext_resource path="res://Fireball/Fireball.gd" type="Script" id=2]
[ext_resource path="res://Fireball/IceSound.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fireball/FireSound.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.508772 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Fireball" type="Area2D"]
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )
region_rect = Rect2( 44, 44, 52, 52 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireSound" parent="." instance=ExtResource( 4 )]

[node name="IceSound" parent="." instance=ExtResource( 3 )]

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 2.01403e-06, 0.794434 )
amount = 3
lifetime = 1.5
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.7
lifetime_randomness = 0.4
local_coords = false
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 90.0
gravity = Vector2( 0, 0 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )
